<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finger Share</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_text">Signup?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_confirm_signup">Confirm Password</string>
    <string name="signup_button_label">Signup</string>
    <string name="signin_label_head">Do you know us already?</string>
    <string name="signin_textview">Signin</string>
    <string name="email_hint_signin">Username/EmailID</string>
    <string name="signup_builder_title">oops!</string>
    <string name="signup_builder_message">Make sure you enter Username, Email and Password</string>
    <string name="signup_builder_validation">Make sure you enter a valid information</string>
    <string name="signup_success_builder_welcome_title">Welcome!</string>
    <string name="signup_success_builder_welcome_message">Eager to see the new World !</string>
    <string name="login_builder_title">oops!</string>
    <string name="login_builder_message">Make sure you enter Valid Username and Password</string>
    <string name="menu_logout_item">Logout</string>
    <string name="empty_inbox_label">No New Messages!!</string>
    <string name="empty_friends_label">Add Friends To Begin</string>
    <string name="menu_edit_friends_item">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="empty_add_friends_label">No Friend Requests</string>
     <string name="error_title">We\'re Sorry</string>
        <string name="menu_camera_label">Camera</string>
        
        <string-array name="camera_options">
            <item >Take Picture</item>
            <item >Take Video</item>
            <item >Choose Picture</item>
            <item >Choose Video</item>
        </string-array>
        <string name="external_storage_not_found">There was a problem Accessing your devide\'s External Storage</string>
        <string name="video_select_limit">The selected video must be less than 10MB</string>
        <string name="selected_file_problem">There was a problem with the selected file</string>
        <string name="file_error_chose_warning">Selected file is greater than 10MB,please choose another</string>

</resources>
