<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dineshsunny.fingershare.MainActivity" >

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="300"
        android:title="@string/menu_logout_item"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/menu_edit_friends"
        android:orderInCategory="200"
        android:title="@string/menu_edit_friends_item"
        app:showAsAction="never"/>
     
      <item
        android:id="@+id/menu_camera"
        android:orderInCategory="100"
        android:title="@string/menu_camera_label"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_camera"/>
      

</menu>
