<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dineshsunny.fingershare.SignUpActivity" >

    <EditText
        android:id="@+id/signup_username_Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signup_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signup_username_Edittext"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signup_email_edittext"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_password_edittext"
        android:layout_marginTop="31dp"
        android:text="@string/signup_button_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_signup_button"
        android:layout_below="@+id/signup_signup_button"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/signin_label_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_label_head" />

        <TextView
            android:id="@+id/signup_signin_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_textview" 
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</RelativeLayout>